Layout issue with script loading after the DOM

--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -21,6 +21,7 @@ body {
   position: relative;
   width: 100%;
   z-index: 100;
+  height: 100vh;
 
   > .panel__content {
       padding-left: 6%;
